# gemsieve

./: .gitignore  README.md  config.example.yaml  env.example  esp_rules.yaml  known_entities.yaml  pyproject.toml  segments.yaml
docs/: manual.md  phase-2.md  phase-3.md  spec-1.md
docs/views/: ai-audit-log.md  ai-inspector.md  attachments.md  classifications.md  content.md  dashboard.md  drafts.md  entities.md  gem-explorer.md  gems.md  messages.md  metadata.md  overrides.md  pipeline-runs.md  pipeline.md  profiles.md  segments.md  temporal.md  threads.md
src/gemsieve/: __init__.py  cli.py  config.py  database.py  esp_rules.py  export.py  known_entities.py  models.py  overrides.py  schema.sql
src/gemsieve/ai/: __init__.py  anthropic_provider.py  base.py  crews.py  ollama.py  prompts.py
src/gemsieve/gmail/: auth.py  client.py  sync.py
src/gemsieve/stages/: classify.py  content.py  engage.py  entities.py  metadata.py  profile.py  relationships.py  segment.py
src/gemsieve/web/: __init__.py  admin.py  api.py  app.py  db.py  models.py  tasks.py
src/gemsieve/web/views/: __init__.py  (+5 more)
tests/: conftest.py  test_cli.py  test_config.py  test_crews.py  test_database.py  test_functional_pipeline.py  test_functional_web.py  test_gem_eligibility.py  test_gmail_sync.py  test_known_entities.py  test_relationships.py  test_scoring_v2.py  test_stage_classify.py  test_stage_content.py  test_stage_engage.py  test_stage_entities.py  test_stage_metadata.py  test_stage_profile.py  test_subdomain.py  test_thread_metrics.py
tests/fixtures/: sample_email.html  sample_message.json
(+6 files in other folders)
